index changes and single work uploads

--- a/single-work.html
+++ b/single-work.html
@@ -9,16 +9,28 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-10 offset-md-1 mb-40">
-                        <h1 class="title mb-30">Project Title</h1>
-                        <p class="mb-30">Adipisicing tempore architecto quae est similique Hic iste explicabo vitae temporibus quidem. Porro itaque quas expedita fugiat accusantium, harum. Quasi provident necessitatibus omnis vel sunt Quia consectetur vel exercitationem debitis aut Excepturi ut possimus suscipit in reprehenderit. Eaque natus quia!  </p>
+                        <h1 class="title mb-30">Sadotech Site Redesign</h1>
+                        <p class="mb-30">I was contracted to evaluate the current site's design, redesign the UX and UI based on my findings, and finally to implement the redesign through development.  </p>
+                        <h2 class="title mb-30">Challenge</h2>
+                        <p class="mb-30">In October, SadoTech moved their website from TicTail to Shopify. Though the move was motivated by Shopify’s more advanced e-commerce platform and analytics, it also provided SadoTech an opportunity to redesign their website. <b> Unfortunately, the launch of the new design correlated with a 50% drop in SadoTech’s overall conversion rate.</b> We were determined to understand what caused the conversion rate to drop, and redesign the site with the goal of lifting the conversion rate for SadoTech’s online site.  </p>
+                        <h2 class="title mb-30">Approach and Research</h2>
+                        <p class="mb-30">We started by creating a <b>site map, conducting a content audit, and analyzing the site heuristics to diagnose some potential problems. </b> Next, we conducted qualitative research through usability testing, in-depth interviews, and contextual inquiry. <br> From our research, we identified a key problem with SadoTech’s website: While users were interested in the products (and liked the affordable prices), users weren’t able to differentiate between the doorbell types. This meant they were unsure which product was right for them, and prevented them from purchasing a doorbell. In our redesign, we focused on strategies to help consumers understand the types of doorbells available and find one that fits their needs.  </p>
+                        <h2 class="title mb-30">Solution and Implementation</h2>
+                        <p class="mb-30">Our hi-fidelity screens all started as sketches, which we put together into a paper prototype. We moved from paper to digital wireframes, which we continually tested and iterated on until we reached our final prototype. After completing our redesign I created a chart to illustrate the impact vs difficulty of each of the different features in the redesign. I was tasked to implement all of the most important design changes through Shopify using Liquid (the native Shopify language). I was able to implement the majority of the design, and became extremely familiar with Shopify and Liquid. Using Google Analytics to track the conversion rates through the e-commerce funnel I was able to determine the impact that our redesign had after completion; <b> the e-commerce conversion rate almost doubled after our redesign went live. </b> </p>
+
+
+
                         <ul class="information">
-                            <li><span class="title">Client:</span> Themeforest</li>
-                            <li><span class="title">Website:</span> envato.com</li>
-                            <li><span class="title">Category:</span> web, creative, photography</li>
+                            <li><span class="title">Client:</span> Sadotech</li>
+                            <li><span class="title">Website:</span> sadotech.com</li>
+                            <li><span class="title">Category:</span> UX evaluation and implementation</li>
                         </ul>
 
-                        <figure class="mt-30"><img src="img/single-work/img-1.jpg" alt=""></figure>
-                        <figure class="mt-30"><img src="img/single-work/img-2.jpg" alt=""></figure>
+                        <figure class="mt-30"><img src="img/portfolio/sadotech.png" alt=""></figure>
+                        <figure class="mt-30"><img src="img/portfolio/img2.png.jpg" alt=""></figure>
+                        <figure class="mt-30"><img src="img/single-work/sitemap-sado.png" alt=""></figure>
+                        <figure class="mt-30"><img src="img/single-work/Feature-Priority-sado.png" alt=""></figure>
+
 
                     </div>
                 </div>
