--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 design">
-                                <a class="ajax-link" href="single-work.html">
+                                <a class="ajax-link" href="single-work-2.html">
                                     <figure>
                                         <img src="img/portfolio/img6.png" alt="">
                                         <figcaption>
@@ -675,7 +675,7 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 brand">
-                                <a class="image-link" href="img/portfolio/img9.png">
+                                <a class="ajax-link" href="single-work-3.html">
                                     <figure>
                                         <img src="img/portfolio/img9.png" alt="">
                                         <figcaption>
@@ -688,7 +688,7 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 graphic">
-                                <a class="image-link" href="img/portfolio/img10.png">
+                                <a class="ajax-link" href="single-work-3.html">                                
                                     <figure>
                                         <img src="img/portfolio/img10.png" alt="">
                                         <figcaption>
