--- a/index.html
+++ b/index.html
@@ -559,9 +559,9 @@
                             <div class="col-md-12 portfolio-filter text-center">
                                 <ul>
                                     <li class="active" data-filter="*">All</li>
-                                    <li data-filter=".brand">UX/UI Design</li>
-                                    <li data-filter=".design">Front-end Dev</li>
-                                    <li data-filter=".graphic">InVision</li>
+                                    <li data-filter=".desgin">UX/UI Design</li>
+                                    <li data-filter=".dev">Front-end Dev</li>
+                                    <li data-filter=".case">Case Studies</li>
                                 </ul>
                             </div>
                         </div>
@@ -570,7 +570,7 @@
                         <div class="row portfolio-items mb-50">
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand graphic">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/img1.png">
                                     <figure>
                                         <img src="img/portfolio/img1.png" alt="">
@@ -583,7 +583,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design">
+                            <div class="item col-lg-4 col-sm-6 design dev case">
                                 <a class="ajax-link" href="single-work.html">
                                     <figure>
                                         <img src="img/portfolio/img2.png" alt="">
@@ -596,7 +596,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design graphic">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/img3.png">
                                     <figure>
                                         <img src="img/portfolio/img3.png" alt="">
@@ -622,7 +622,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand">
+                            <div class="item col-lg-4 col-sm-6 design dev">
                                 <a class="image-link" href="img/portfolio/img5.png">
                                     <figure>
                                         <img src="img/portfolio/img5.png" alt="">
@@ -635,7 +635,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design">
+                            <div class="item col-lg-4 col-sm-6 design dev">
                                 <a class="ajax-link" href="single-work-2.html">
                                     <figure>
                                         <img src="img/portfolio/img6.png" alt="">
@@ -648,7 +648,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 graphic">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/img7.png">
                                     <figure>
                                         <img src="img/portfolio/img7.png" alt="">
@@ -661,7 +661,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a href="https://invis.io/BNQ47NZ5SQ9#/268597696_Start" target="_blank">
                                     <figure>
                                         <img src="img/portfolio/img8.png" alt="">
@@ -674,7 +674,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand">
+                            <div class="item col-lg-4 col-sm-6 design case">
                                 <a class="ajax-link" href="single-work-3.html">
                                     <figure>
                                         <img src="img/portfolio/img9.png" alt="">
@@ -687,7 +687,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 graphic">
+                            <div class="item col-lg-4 col-sm-6 design case">
                                 <a class="ajax-link" href="single-work-3.html">                                
                                     <figure>
                                         <img src="img/portfolio/img10.png" alt="">
@@ -700,7 +700,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand graphic">
+                            <div class="item col-lg-4 col-sm-6 design dev case">
                                 <a class="ajax-link" href="single-work.html">
                                     <figure>
                                         <img src="img/portfolio/img11.png" alt="">
