--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                             <div class="col-md-12 portfolio-filter text-center">
                                 <ul>
                                     <li class="active" data-filter="*">All</li>
-                                    <li data-filter=".desgin">UX/UI Design</li>
+                                    <li data-filter=".design">UX/UI Design</li>
                                     <li data-filter=".dev">Front-end Dev</li>
                                     <li data-filter=".case">Case Studies</li>
                                 </ul>
