--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design dev">
+                            <div class="item col-lg-4 col-sm-6 design dev case">
                                 <a class="ajax-link" href="single-work-2.html">
                                     <figure>
                                         <img src="img/portfolio/img6.png" alt="">
