--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design case">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a class="ajax-link" href="single-work-3.html">                                
                                     <figure>
                                         <img src="img/portfolio/img10.png" alt="">
@@ -700,7 +700,7 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design dev case">
+                            <div class="item col-lg-4 col-sm-6 design dev">
                                 <a class="ajax-link" href="single-work.html">
                                     <figure>
                                         <img src="img/portfolio/img11.png" alt="">
