--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                                 </div>
 
                                 <!--Form Start-->
-                                <form id="contact-form" method="post" action="mail.php">
+                                <form id="contact-form" method="get" action="mail.php">
                                     <div class="row">
 
 
