--- a/index.html
+++ b/index.html
@@ -860,7 +860,8 @@
                                 </div>
 
                                 <!--Form Start-->
-                                <form id="contact-form" method="get" action="mail.php">
+                                <form action="http://formspree.io/dan.j.rieger@gmail.com">
+
                                     <div class="row">
 
 
@@ -875,7 +876,7 @@
                                         <!--Email Field-->
                                         <div class="col-md-6 mb-50">
                                             <span class="input">
-                                                <input class="input__field cf-validate" type="text" id="cf-email" name="email" />
+                                                <input class="input__field cf-validate" type="email" id="cf-email" name="email" />
                                                 <label class="input__label" for="cf-email">Email</label>
                                             </span>
                                         </div>
@@ -883,7 +884,7 @@
                                         <!--Message Box-->
                                         <div class="col-md-12 mb-30">
                                             <span class="input">
-                                                <textarea  class="input__field cf-validate" id="cf-message" name="message" rows="5" ></textarea>
+                                                <textarea  class="input__field cf-validate" id="cf-message" name="body" rows="5" ></textarea>
                                                 <label class="input__label" for="cf-message">How can I help you?</label>
                                             </span>
                                         </div>
@@ -892,7 +893,7 @@
 
                                         <!--Submit Button-->
                                         <div class="col-md-12 text-center">
-                                            <button id="cf-submit" class="btn-main">Send Message</button>
+                                            <button id="cf-submit" class="btn-main" type="submit" value="Send">Send Message</button>
                                         </div>
 
 
