--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                                 </div>
 
                                 <!--Form Start-->
-                                <form action="http://formspree.io/dan.j.rieger@gmail.com">
+                                <form action="http://formspree.io/dan.j.rieger@gmail.com" method="POST" >
 
                                     <div class="row">
 
