--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="vcard, resume, personal, portfolio, cv, card, responsive" />
         <meta name="description" content="vCard / Resume / Personal / Portfolio Template" />
         <meta name="author" content="cosmos-themes" />
-
+        <meta name="referrer" content="origin">
         <!--Page Title-->
         <title>Dan Rieger</title>
 
